--- a/css/scss/_palette.scss
+++ b/css/scss/_palette.scss
@@ -4,9 +4,10 @@ $primary-2: #00beff; // main-color
 $primary-3: #ffffff; // white-bg
 $primary-4: #f5f5f5; // gray-bg
 $primary-5: rgba(0, 0, 0, 0.4); // light-balck-bg
-$primary-6: rgba(255, 255, 255, 0.1); // light-balck-bg
+$primary-6: rgba(0, 0, 0, 0.1); // light-balck-bg
 $primary-7: rgb(58, 151, 216, 0.3); // light-blue-bg
 $primary-8: rgba(255, 255, 255, 0.7);  // light-gray-bg
+$primary-9: rgba(0, 0, 0, 0.75); // dark-balck-bg
 
 $color-palette: (
   "primary-1": $primary-1,
@@ -17,4 +18,5 @@ $color-palette: (
   "primary-6": $primary-6,
   "primary-7": $primary-7,
   "primary-8": $primary-8,
+  "primary-9": $primary-9,
 );
