--- a/css/style.scss
+++ b/css/style.scss
@@ -163,6 +163,17 @@ header {
                     z-index: 3;
                     margin: 0;
                     padding: 0;
+                    animation: show 0.75s ease-in-out 0.3s forwards;
+                    @keyframes show {
+                        0% {
+                          filter: blur(5px);
+                          transform: translateY(calc(-50% + 75px));
+                        }
+                        100% {
+                          opacity: 1;
+                          filter: blur(0);
+                        }
+                    }
                     h2 {
                         margin-bottom:15px;
                         text-align: left;
